--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
     
     <section class="promo section section-on-bg">
         <div class="container text-center">                
-            <h2 class="title">Let's get your product online fast<br />and get attention right away!</h2>
-            <p class="intro">Velocity is a mobile-friendly HTML5 template designed to help you <br /> promote your product effectively to your target users</p>
+            <h2 class="title">Government Services Redefined<br /></h2>
+            <p class="intro">Beautiful and modern experience for your citizens </p>
             <p><a class="btn btn-cta btn-cta-primary" href="signup.html">Try Velocity Free</a></p>   
             <button type="button" class="play-trigger btn-link " data-toggle="modal" data-target="#modal-video" ><i class="fa fa-youtube-play"></i> Watch the video</button>
         </div><!--//container-->
