--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <header id="header" class="header navbar-fixed-top">  
         <div class="container">       
             <h1 class="logo">
-                <a href="index.html"><span class="text">Velocity</span></a>
+                <a href="index.html"><span class="text">CivicHub</span></a>
             </h1><!--//logo-->
             <nav class="main-nav navbar-right" role="navigation">
                 <div class="navbar-header">
@@ -48,21 +48,10 @@
                         <li class="active nav-item"><a href="index.html">Home</a></li>
                         <li class="nav-item"><a href="features.html">Features</a></li>
                         <li class="nav-item"><a href="pricing.html">Pricing</a></li>
-                        <li class="nav-item dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false" href="#">Pages <i class="fa fa-angle-down"></i></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="download.html">Download Apps</a></li>
-                                <li><a href="blog.html">Blog</a></li>
-                                <li><a href="blog-single.html">Blog Single</a></li>
-                                <li><a href="blog-category.html">Blog Category</a></li>
-                                <li><a href="blog-archive.html">Blog Archive</a></li>
                                 <li><a href="about.html">About Us</a></li>
                                 <li><a href="contact.html">Contact</a></li>                    
-                            </ul>                            
-                        </li><!--//dropdown-->                         
-                        <li class="nav-item"><a href="login.html">Log in</a></li>
-                        <li class="nav-item nav-item-cta last"><a class="btn btn-cta btn-cta-secondary" href="signup.html">Sign Up Free</a></li>
-                    </ul><!--//nav-->
+ 
+                   </ul><!--//nav-->
                 </div><!--//navabr-collapse-->
             </nav><!--//main-nav-->                     
         </div><!--//container-->
@@ -82,7 +71,7 @@
         <div class="container text-center">                
             <h2 class="title">Government Services Redefined<br /></h2>
             <p class="intro">Beautiful and modern experience for your citizens </p>
-            <p><a class="btn btn-cta btn-cta-primary" href="signup.html">Try Velocity Free</a></p>   
+            <p><a class="btn btn-cta btn-cta-primary" href="signup.html">Request Demo</a></p>   
             <button type="button" class="play-trigger btn-link " data-toggle="modal" data-target="#modal-video" ><i class="fa fa-youtube-play"></i> Watch the video</button>
         </div><!--//container-->
     </section><!--//promo-->
