--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
     <section class="promo section section-on-bg">
         <div class="container text-center">                
             <h2 class="title">Government Services Redefined<br /></h2>
-            <p class="intro">Beautiful and modern experience for your citizens </p>
-            <p><a class="btn btn-cta btn-cta-primary" href="signup.html">Request Demo</a></p>   
+            <p class="intro">Give your citizens a modern and seamless experience </p>
+            <p><a class="btn btn-cta btn-cta-primary" href="contact.html">Request Demo</a></p>   
             <button type="button" class="play-trigger btn-link " data-toggle="modal" data-target="#modal-video" ><i class="fa fa-youtube-play"></i> Watch the video</button>
         </div><!--//container-->
     </section><!--//promo-->
@@ -81,8 +81,8 @@
         <!-- ******Why Section****** -->
         <section id="why" class="section why">
             <div class="container">
-                <h2 class="title text-center">How Can Velocity Help You?</h2>
-                <p class="intro text-center">We take care of the UX and front-end design so you can save time building your site</p>
+                <h2 class="title text-center">How CivicHub Can Make You A Digital Leader</h2>
+                <p class="intro text-center">We take care of digitizing government services so you can save time and effort</p>
                 <div class="row item">
                     <div class="content col-md-4 col-sm-12 col-xs-12">
                         <h3 class="title">Save you time and effort</h3>
