--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     
     <section class="promo section section-on-bg">
         <div class="container text-center">                
-            <h2 class="title">All of Your Government Services in One Place<br /></h2>
+            <h2 class="title">Government Services in One Place<br /></h2>
             <p class="intro">We make it easy to find, submit and keep track of requests</p>
             <p><a class="btn btn-cta btn-cta-primary" href="contact.html">Request a Demo</a></p>   
             <button type="button" class="play-trigger btn-link " data-toggle="modal" data-target="#modal-video" ><i class="fa fa-youtube-play"></i> Watch the video</button>
@@ -82,7 +82,7 @@
         <section id="why" class="section why">
             <div class="container">
                 <h2 class="title text-center">How CivicHub Can Make You a Government Leader</h2>
-                <p class="intro text-center">We help you go paperless and get the data you need in 8 weeks</p>
+                <p class="intro text-center">We help you organize your services, go paperless, and get the data you need in 8-12 weeks</p>
                 <div class="row item">
                     <div class="content col-md-4 col-sm-12 col-xs-12">
                         <h3 class="title">Go Digital and Leave the Paper Trail Behind</h3>
@@ -99,12 +99,12 @@
                             </div><!--//quote-content-->                                     
                         </div><!--//quote-->                        
                     </div><!--//content-->
-                    <figure class="figure col-md-7 col-sm-12 col-xs-12 col-md-offset-1 col-sm-offset-0 col-xs-offset-0">
+--!>                    <figure class="figure col-md-7 col-sm-12 col-xs-12 col-md-offset-1 col-sm-offset-0 col-xs-offset-0">
                         <img class="img-responsive" src="assets/images/figures/figure-1.png" alt="" />
                         <figcaption class="figure-caption">(Screenshot: Coral - App &amp; website startup kit) </figcaption>
                     </figure>
                 </div><!--//item-->
---!>            
+            
                 <div class="row item">
                     <div class="content col-md-4 col-sm-12 col-xs-12 col-md-push-8 col-sm-push-0 col-xs-push-0">
                         <h3 class="title">Gain Valuable Operational Insights</h3>
