--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
                         <li class="active nav-item"><a href="index.html">Home</a></li>
                         <li class="nav-item"><a href="features.html">Features</a></li>
                         <li class="nav-item"><a href="pricing.html">Pricing</a></li>
-                                <li><a href="about.html">About Us</a></li>
-                                <li><a href="contact.html">Contact</a></li>                    
- 
+                        <li class="nav-item"><a href="about.html">About Us</a></li>
+                        <li class="nav-item"><a href="contact.html">Contact</a></li>                    
                    </ul><!--//nav-->
                 </div><!--//navabr-collapse-->
             </nav><!--//main-nav-->                     
@@ -99,7 +98,7 @@
                             </div><!--//quote-content-->                                     
                         </div><!--//quote-->                        
                     </div><!--//content-->
---!>                    <figure class="figure col-md-7 col-sm-12 col-xs-12 col-md-offset-1 col-sm-offset-0 col-xs-offset-0">
+-->                    <figure class="figure col-md-7 col-sm-12 col-xs-12 col-md-offset-1 col-sm-offset-0 col-xs-offset-0">
                         <img class="img-responsive" src="assets/images/figures/figure-1.png" alt="" />
                         <figcaption class="figure-caption">(Screenshot: Coral - App &amp; website startup kit) </figcaption>
                     </figure>
@@ -131,7 +130,7 @@
                         </div><!--//control-->
                     </figure>
                 </div><!--//item-->
---!>                
+-->                
                 <div class="row item ">
                     <div class="content col-md-4 col-sm-12 col-xs-12">
                         <h3 class="title">Go Digital Without Investing in System Upgrades</h3>
@@ -392,7 +391,7 @@
         </div><!--//modal-dialog-->
     </div><!--//modal-->
     
-    <!-- *****CONFIGURE STYLE****** -->  
+    <!-- *****CONFIGURE STYLE******  
     <div class="config-wrapper">
         <div class="config-wrapper-inner">
             <a id="config-trigger" class="config-trigger" href="#"><i class="fa fa-cog"></i></a>
@@ -414,7 +413,7 @@
             </div><!--//configure-panel-->
         </div><!--//config-wrapper-inner-->
     </div><!--//config-wrapper-->
- 
+  -->
     <!-- Javascript -->          
     <script type="text/javascript" src="assets/plugins/jquery-1.11.2.min.js"></script>
     <script type="text/javascript" src="assets/plugins/jquery-migrate-1.2.1.min.js"></script>
