--- a/index.html
+++ b/index.html
@@ -96,9 +96,11 @@
                                 <blockquote><p><a href="https://twitter.com/3rdwave_themes" target="_blank">@velocity</a> Love it! Thank you for making my life easier and saving me time! I’ll definitely recommend it to my friends. :)</p></blockquote>
                                 <p class="source">@LisaW, Bristol</p>
                             </div><!--//quote-content-->                                     
-                        </div><!--//quote-->                        
+                        </div><!--//quote-->                       
+                        --> 
                     </div><!--//content-->
--->                    <figure class="figure col-md-7 col-sm-12 col-xs-12 col-md-offset-1 col-sm-offset-0 col-xs-offset-0">
+
+                   <figure class="figure col-md-7 col-sm-12 col-xs-12 col-md-offset-1 col-sm-offset-0 col-xs-offset-0">
                         <img class="img-responsive" src="assets/images/figures/figure-1.png" alt="" />
                         <figcaption class="figure-caption">(Screenshot: Coral - App &amp; website startup kit) </figcaption>
                     </figure>
