--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
     
     <section class="promo section section-on-bg">
         <div class="container text-center">                
-            <h2 class="title">Government Services in One Place<br /></h2>
-            <p class="intro">We make it easy to find, submit and keep track of requests</p>
+            <h2 class="title">Government Services All in One Place<br /></h2>
+            <p class="intro">We make it easy for constituents to find, submit and keep track of requests</p>
             <p><a class="btn btn-cta btn-cta-primary" href="contact.html">Request a Demo</a></p>   
             <button type="button" class="play-trigger btn-link " data-toggle="modal" data-target="#modal-video" ><i class="fa fa-youtube-play"></i> Watch the video</button>
         </div><!--//container-->
@@ -88,7 +88,7 @@
                         <div class="desc">
                             <p>We convert your paper forms and workflows to a seamless digital experience. Simplify your operations and meet the needs of today’s constituents by automating cumbersome paper processes. Our platform will help you deliver government services – with fast, efficient, fully digital solutions that seamlessly integrate with existing forms, documents, workflows, and back-end systems. </p>
                         </div>
-<!--                        <div class="quote">
+                        <div class="quote">
                             <div class="quote-profile">
                                 <img class="img-responsive img-circle" src="assets/images/people/profile-s-1.png" alt="" />
                             </div><!--//profile-->
