--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <div class="desc">
                             <p>We convert your paper forms and workflows to a seamless digital experience. Simplify your operations and meet the needs of today’s constituents by automating cumbersome paper processes. Our platform will help you deliver government services – with fast, efficient, fully digital solutions that seamlessly integrate with existing forms, documents, workflows, and back-end systems. </p>
                         </div>
-                        <!--<div class="quote">
+                        <div class="quote">
                             <div class="quote-profile">
                                 <img class="img-responsive img-circle" src="assets/images/people/profile-s-1.png" alt="" />
                             </div><!--//profile-->
@@ -96,7 +96,7 @@
                                 <blockquote><p><a href="https://twitter.com/3rdwave_themes" target="_blank">@velocity</a> Love it! Thank you for making my life easier and saving me time! I’ll definitely recommend it to my friends. :)</p></blockquote>
                                 <p class="source">@LisaW, Bristol</p>
                             </div><!--//quote-content-->                                     
-                        </div>//quote-->                        
+                        </div><!--//quote-->                        
                     </div><!--//content-->
 
                    <figure class="figure col-md-7 col-sm-12 col-xs-12 col-md-offset-1 col-sm-offset-0 col-xs-offset-0">
