--- a/index.html
+++ b/index.html
@@ -110,7 +110,27 @@
                         <h3 class="title">Gain Valuable Operational Insights</h3>
                         <div class="desc">
                             <p>Get instant visibility into your operations including what are your most popular services, processing time, handoffs, bottlenecks and more. All without requiring staff to change how they work today. </p>
-             
+                            <p>The original PSD of the graphic is included in the package. You can easily customise the PSD to meet your needs.</p>
+                            <p><i class="fa fa-download"></i> <a href="download.html">Download mobile versions</a></p>
+                        </div>
+                        
+                        <div class="quote">
+                            <div class="quote-profile">
+                                <img class="img-responsive img-circle" src="assets/images/people/profile-s-2.png" alt="" />
+                            </div><!--//profile-->
+                            <div class="quote-content">
+                                <blockquote><p>I find the mobile app very useful when I'm on the go. Sed ut perspiciatis unde omnis iste natus error sit voluptatem </p></blockquote>
+                                <p class="source">@JackT, San Francisco</p>
+                            </div><!--//quote-content-->         
+                        </div><!--//quote-->                        
+                    </div><!--//content-->
+                    <figure class="figure col-md-7 col-sm-12 col-xs-12 col-md-pull-4 col-sm-pull-0 col-xs-pull-0">
+                        <img class="img-responsive" src="assets/images/figures/figure-2.png" alt="" />
+                        <div class="control text-center">
+                            <button type="button" class="play-trigger" data-toggle="modal" data-target="#modal-video"><i class="fa fa-play"></i></button>                    
+                        </div><!--//control-->
+                    </figure>
+                </div><!--//item-->              
                 <div class="row item ">
                     <div class="content col-md-4 col-sm-12 col-xs-12">
                         <h3 class="title">Go Digital Without Investing in System Upgrades</h3>
