removed 2nd quote again

--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
                         <div class="desc">
                             <p>Get instant visibility into your operations including what are your most popular services, processing time, handoffs, bottlenecks and more. All without requiring staff to change how they work today. </p>
                             <p>The original PSD of the graphic is included in the package. You can easily customise the PSD to meet your needs.</p>
+                            <p><i class="fa fa-download"></i> <a href="download.html">Download mobile versions</a></p>
+                        </div>
+                        
                     </div><!--//content-->
                     <figure class="figure col-md-7 col-sm-12 col-xs-12 col-md-pull-4 col-sm-pull-0 col-xs-pull-0">
                         <img class="img-responsive" src="assets/images/figures/figure-2.png" alt="" />
