--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <!-- ******Testimonials Section****** -->
         <section class="section testimonials">
             <div class="container">
-                <h2 class="title text-center">What are people saying about Velocity?</h2>
+                <h2 class="title text-center">What are government leaders saying about CivicHub?</h2>
                 <div id="testimonials-carousel" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#testimonials-carousel" data-slide-to="0" class="active"></li>
@@ -162,7 +162,7 @@
                             <div class="content">
                                 <blockquote>
                                 <i class="fa fa-quote-left"></i>
-                                <p>We used Velocity as a front-end design template for our product site. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum elit tortor, consectetur vitae varius at, interdum eget libero. Morbi.</p>
+                                <p>CivicHub has the potential to transform how government interacts with its constituents. When citizens have a painful experience it erodes their trust in government. CivicHub helps government organizations create a seamless experience.</p>
                                 </blockquote>
                                 <p class="source">Kevin Knight<br /><span class="title">Co-Founder, Startup Hub</span></p>
                             </div><!--//content-->                         
