--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@
                     </ol><!--//carousel-indicators-->
                     <div class="carousel-inner">
                         <div class="item active">
-                            <figure class="profile"><img src="assets/images/people/profile-m-1.png" alt="" /></figure>
+                            <figure class="profile"><img src="assets/images/people/kirin_circle.png" alt="" /></figure>
                             <div class="content">
                                 <blockquote>
                                 <i class="fa fa-quote-left"></i>
-                                <p>CivicHub has the potential to transform how government interacts with its constituents. When citizens have a painful experience it erodes their trust in government. CivicHub helps government organizations create a seamless experience.</p>
+                                <p>When citizens have a painful experience it erodes their trust in government. CivicHub has the potential to transform how government interacts with its constituents by creating a seamless experience.</p>
                                 </blockquote>
                                 <p class="source">Kevin Knight<br /><span class="title">Co-Founder, Startup Hub</span></p>
                             </div><!--//content-->                         
