--- a/index.html
+++ b/index.html
@@ -158,13 +158,13 @@
                     </ol><!--//carousel-indicators-->
                     <div class="carousel-inner">
                         <div class="item active">
-                            <figure class="profile"><img src="assets/images/people/kirin_circle.png" alt="" /></figure>
+                            <figure class="profile"><img src="assets/images/people/kiran_circle.png" alt="" /></figure>
                             <div class="content">
                                 <blockquote>
                                 <i class="fa fa-quote-left"></i>
                                 <p>When citizens have a painful experience it erodes their trust in government. CivicHub has the potential to transform how government interacts with its constituents by creating a seamless experience.</p>
                                 </blockquote>
-                                <p class="source">Kevin Knight<br /><span class="title">Co-Founder, Startup Hub</span></p>
+                                <p class="source">Kiran Jain<br /><span class="title">Former Deputy City Attorney, City of Oakland</span></p>
                             </div><!--//content-->                         
                         </div><!--//item-->                        
                         <div class="item">
