change kiran title

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                                 <i class="fa fa-quote-left"></i>
                                 <p>When citizens have a painful experience it erodes their trust in government. CivicHub has the potential to transform how government interacts with its constituents by creating a seamless experience.</p>
                                 </blockquote>
-                                <p class="source">Kiran Jain<br /><span class="title">Former Deputy City Attorney, City of Oakland</span></p>
+                                <p class="source">K Jain<br /><span class="title">Former Deputy City Attorney</span></p>
                             </div><!--//content-->                         
                         </div><!--//item-->                        
                         <div class="item">
