--- a/index.html
+++ b/index.html
@@ -198,10 +198,9 @@
         <!-- ******CTA Section****** -->
         <section id="cta-section" class="section cta-section text-center home-cta-section">
             <div class="container">
-               <h2 class="title">Ready to promote your product online?</h2>
-               <p class="intro">More than <span class="counting">300,000</span> users are using Velocity</p>
-               <p><a class="btn btn-cta btn-cta-primary" href="https://wrapbootstrap.com/theme/velocity-designed-for-products-WB0N38R04" target="_blank">Get Velocity Now</a></p>
-            </div><!--//container-->
+               <h2 class="title">Ready to modernize your government services?</h2>
+      			<p><a class="btn btn-cta btn-cta-primary" href="contact.html">Request a Demo</a></p>   
+                  </div><!--//container-->
         </section><!--//cta-section-->
         
     </div><!--//section-wrapper-->
