--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <!-- ******CTA Section****** -->
         <section id="cta-section" class="section cta-section text-center home-cta-section">
             <div class="container">
-               <h2 class="title">Ready to modernize your government services?</h2>
+               <h2 class="title">Ready to simplify government services?</h2>
       			<p><a class="btn btn-cta btn-cta-primary" href="contact.html">Request a Demo</a></p>   
                   </div><!--//container-->
         </section><!--//cta-section-->
@@ -214,9 +214,8 @@
                         <div class="footer-col-inner">
                             <h3 class="title">About us</h3>
                             <ul class="list-unstyled">
+                                <li><a href="#"><i class="fa fa-caret-right"></i>Our Vision</a></li>
                                 <li><a href="#"><i class="fa fa-caret-right"></i>Who we are</a></li>
-                                <li><a href="#"><i class="fa fa-caret-right"></i>Press</a></li>
-                                <li><a href="#"><i class="fa fa-caret-right"></i>Blog</a></li>
                                 <li><a href="#"><i class="fa fa-caret-right"></i>Jobs</a></li>
                                 <li><a href="#"><i class="fa fa-caret-right"></i>Contact us</a></li>
                             </ul>
@@ -226,24 +225,11 @@
                         <div class="footer-col-inner">
                             <h3 class="title">Product</h3>
                             <ul class="list-unstyled">
-                                <li><a href="#"><i class="fa fa-caret-right"></i>How it works</a></li>
-                                <li><a href="#"><i class="fa fa-caret-right"></i>API</a></li>
-                                <li><a href="#"><i class="fa fa-caret-right"></i>Download Apps</a></li>
+                                <li><a href="#"><i class="fa fa-caret-right"></i>Features</a></li>
                                 <li><a href="#"><i class="fa fa-caret-right"></i>Pricing</a></li>
                             </ul>
                         </div><!--//footer-col-inner-->
                     </div><!--//foooter-col-->              
-                    <div class="footer-col links col-md-2 col-sm-4 col-xs-12 sm-break">
-                        <div class="footer-col-inner">
-                            <h3 class="title">Support</h3>
-                            <ul class="list-unstyled">
-                                <li><a href="#"><i class="fa fa-caret-right"></i>Help</a></li>
-                                <li><a href="#"><i class="fa fa-caret-right"></i>Documentation</a></li>
-                                <li><a href="#"><i class="fa fa-caret-right"></i>Terms of services</a></li>
-                                <li><a href="#"><i class="fa fa-caret-right"></i>Privacy</a></li>
-                            </ul>
-                        </div><!--//footer-col-inner-->            
-                    </div><!--//foooter-col-->   
                     <div class="footer-col connect col-md-6 col-sm-12 col-xs-12">
                         <div class="footer-col-inner">
                             <ul class="social list-inline">
