--- a/index.html
+++ b/index.html
@@ -229,10 +229,11 @@
                                 <li><a href="#"><i class="fa fa-caret-right"></i>Pricing</a></li>
                             </ul>
                         </div><!--//footer-col-inner-->
-                    <div class="footer-col links col-md-5 col-sm-4 col-xs-12 sm-break">
+                    </div><!--//foooter-col-->              
+                    <div class="footer-col links col-md-2 col-sm-4 col-xs-12 sm-break">
                         <div class="footer-col-inner">
-                         <h3 class="title">Contact us</h3>                          
-                            <p class="adr clearfix">
+                            <h3 class="title">Contact Us</h3>
+ 							<p class="adr clearfix">
                                 <i class="fa fa-map-marker pull-left"></i>        
                                 <span class="adr-group pull-left">       
                                     <span class="street-address">College Green</span><br>
@@ -245,10 +246,17 @@
                             <p class="email"><i class="fa fa-envelope-o"></i><a href="#">enquires@website.com</a></p> 
                             <a href="https://twitter.com/3rdwave_themes" class="twitter-follow-button" data-show-count="false">Follow @3rdwave_themes</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>                        
-                        </div><!--//footer-col-inner-->
-                    </div><!--//foooter-col-->              
+                        </div><!--//footer-col-inner-->            
+                    </div><!--//foooter-col-->   
                     <div class="footer-col connect col-md-6 col-sm-12 col-xs-12">
                         <div class="footer-col-inner">
+                            <ul class="social list-inline">
+                                <li><a href="https://twitter.com/3rdwave_themes" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>        
+                                <li class="row-end"><a href="#"><i class="fa fa-rss"></i></a></li>             
+                            </ul>
                             <div class="form-container">
                                 <p class="intro">Stay up to date with the latest news and offers from Velocity</p>
                                 <form class="signup-form navbar-form">
