--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <li class="nav-item"><a href="features.html">Features</a></li>
                         <li class="nav-item"><a href="pricing.html">Pricing</a></li>
                         <li class="nav-item"><a href="about.html">About Us</a></li>
-                        <li class="nav-item"><a href="contact.html">Contact</a></li>                    
+                        <li class="nav-item"><a href="contact.html">Request a Demo</a></li>                    
                    </ul><!--//nav-->
                 </div><!--//navabr-collapse-->
             </nav><!--//main-nav-->                     
@@ -227,6 +227,7 @@
                             <ul class="list-unstyled">
                                 <li><a href="#"><i class="fa fa-caret-right"></i>Features</a></li>
                                 <li><a href="#"><i class="fa fa-caret-right"></i>Pricing</a></li>
+                                <li><a href="#"><i class="fa fa-caret-right"></i>Request a Demo</a></li>
                             </ul>
                         </div><!--//footer-col-inner-->
                     </div><!--//foooter-col-->              
@@ -236,15 +237,14 @@
  							<p class="adr clearfix">
                                 <i class="fa fa-map-marker pull-left"></i>        
                                 <span class="adr-group pull-left">       
-                                    <span class="street-address">College Green</span><br>
-                                    <span class="region">56 College Green Road</span><br>
-                                    <span class="postal-code">BS1 XR18</span><br>
-                                    <span class="country-name">UK</span>
+                                    <span class="street-address">645 Harrison St, </span><br>
+                                    <span class="region">SF, CA 94107</span><br>
+                                    <span class="country-name">US</span>
                                 </span>
                             </p>
-                            <p class="tel"><i class="fa fa-phone"></i>0800 123 4567</p>
-                            <p class="email"><i class="fa fa-envelope-o"></i><a href="#">enquires@website.com</a></p> 
-                            <a href="https://twitter.com/3rdwave_themes" class="twitter-follow-button" data-show-count="false">Follow @3rdwave_themes</a>
+                            <p class="tel"><i class="fa fa-phone"></i>(877) 902-2544</p>
+                            <p class="email"><i class="fa fa-envelope-o"></i><a href="#">help@website.com</a></p> 
+                            <a href="https://twitter.com/3rdwave_themes" class="twitter-follow-button" data-show-count="false">Follow @Jay_Nath</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>                        
                         </div><!--//footer-col-inner-->            
                     </div><!--//foooter-col-->   
