--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         </div><!--//footer-content-->
         <div class="bottom-bar">
             <div class="container">
-                <small class="copyright">Copyright @ 2015 <a href="http://themes.3rdwavemedia.com/" target="_blank">3rd Wave Media</a></small>                
+                 <p id="copyright"></p>              
             </div><!--//container-->
         </div><!--//bottom-bar-->
     </footer><!--//footer-->
