--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                                 </span>
                             </p>
                             <p class="tel"><i class="fa fa-phone"></i>(877) 902-2544</p>
-                            <p class="email"><i class="fa fa-envelope-o"></i><a href="#">help@website.com</a></p> 
+                            <p class="email"><i class="fa fa-envelope-o"></i><a href="#">help@civichub.com</a></p> 
                             <a href="https://twitter.com/3rdwave_themes" class="twitter-follow-button" data-show-count="false">Follow @Jay_Nath</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>                        
                         </div><!--//footer-col-inner-->            
@@ -251,11 +251,6 @@
                     <div class="footer-col connect col-md-6 col-sm-12 col-xs-12">
                         <div class="footer-col-inner">
                             <ul class="social list-inline">
-                                <li><a href="https://twitter.com/3rdwave_themes" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>        
-                                <li class="row-end"><a href="#"><i class="fa fa-rss"></i></a></li>             
                             </ul>
                             <div class="form-container">
                                 <p class="intro">Stay up to date with the latest news and offers from Velocity</p>
@@ -274,16 +269,7 @@
         </div><!--//footer-content-->
         <div class="bottom-bar">
             <div class="container">
-                <small class="copyright">Copyright @ 2015 <a href="http://themes.3rdwavemedia.com/" target="_blank">3rd Wave Media</a></small>  
-                <script language="javascript">
-                	function copyrightYear() {
-   					var d = new Date();
-   					var y = d.getFullYear();
-   					document.getElementById("copyright").innerHTML = 'Copyright &copy; ' + y + 'CivicHub';
-				}
-
-					copyrightYear();
-				</script>
+                <small class="copyright">Copyright @ 2015 <a href="http://civichub.com" target="_blank">CivicHub</a></small>  
             </div><!--//container-->
         </div><!--//bottom-bar-->
     </footer><!--//footer-->
