removed social media code

--- a/index.html
+++ b/index.html
@@ -250,10 +250,8 @@
                     </div><!--//foooter-col-->   
                     <div class="footer-col connect col-md-6 col-sm-12 col-xs-12">
                         <div class="footer-col-inner">
-                            <ul class="social list-inline">
-                            </ul>
                             <div class="form-container">
-                                <p class="intro">Stay up to date with the latest news and offers from Velocity</p>
+                                <p class="intro">Stay up to date with the latest news and offers from CivicHub</p>
                                 <form class="signup-form navbar-form">
                                     <div class="form-group">
                                         <input type="text" class="form-control" placeholder="Enter your email address">
