--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                             </p>
                             <p class="tel"><i class="fa fa-phone"></i>(877) 902-2544</p>
                             <p class="email"><i class="fa fa-envelope-o"></i><a href="#">help@civichub.com</a></p> 
-                            <a href="https://twitter.com/3rdwave_themes" class="twitter-follow-button" data-show-count="false">Follow @Jay_Nath</a>
+                            <a href="https://twitter.com/jay_nath" class="twitter-follow-button" data-show-count="false">Follow @Jay_Nath</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>                        
                         </div><!--//footer-col-inner-->            
                     </div><!--//foooter-col-->   
