--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <!-- ******CTA Section****** -->
         <section id="cta-section" class="section cta-section text-center home-cta-section">
             <div class="container">
-               <h2 class="title">Ready to simplify government services?</h2>
+               <h2 class="title">Ready to modernize government services?</h2>
       			<p><a class="btn btn-cta btn-cta-primary" href="contact.html">Request a Demo</a></p>   
                   </div><!--//container-->
         </section><!--//cta-section-->
@@ -214,7 +214,7 @@
                         <div class="footer-col-inner">
                             <h3 class="title">About us</h3>
                             <ul class="list-unstyled">
-                                <li><a href="#"><i class="fa fa-caret-right"></i>Our Vision</a></li>
+                                <li><a href="#"><i class="fa fa-caret-right"></i>Our vision</a></li>
                                 <li><a href="#"><i class="fa fa-caret-right"></i>Who we are</a></li>
                                 <li><a href="#"><i class="fa fa-caret-right"></i>Jobs</a></li>
                                 <li><a href="#"><i class="fa fa-caret-right"></i>Contact us</a></li>
@@ -237,14 +237,13 @@
  							<p class="adr clearfix">
                                 <i class="fa fa-map-marker pull-left"></i>        
                                 <span class="adr-group pull-left">       
-                                    <span class="street-address">645 Harrison St, </span><br>
+                                    <span class="street-address">645 Harrison St</span><br>
                                     <span class="region">SF, CA 94107</span><br>
-                                    <span class="country-name">US</span>
                                 </span>
                             </p>
                             <p class="tel"><i class="fa fa-phone"></i>(877) 902-2544</p>
-                            <p class="email"><i class="fa fa-envelope-o"></i><a href="#">help@civichub.com</a></p> 
-                            <a href="https://twitter.com/jay_nath" class="twitter-follow-button" data-show-count="false">Follow @Jay_Nath</a>
+                            <p class="email"><i class="fa fa-envelope-o"></i><a href="mailto:help@civichub.com?Subject=Hello">help@civichub.com</a></p> 
+                            <a href="https://twitter.com/civichub" class="twitter-follow-button" data-show-count="false">Follow @CivicHub</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>                        
                         </div><!--//footer-col-inner-->            
                     </div><!--//foooter-col-->   
