--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                     <div class="footer-col connect col-md-6 col-sm-12 col-xs-12">
                         <div class="footer-col-inner">
                             <div class="form-container">
-                                <p class="intro">Stay up to date with the latest news and offers from CivicHub</p>
+                                <p class="intro">Stay up to date with the latest news from CivicHub</p>
                                 <form class="signup-form navbar-form">
                                     <div class="form-group">
                                         <input type="text" class="form-control" placeholder="Enter your email address">
