--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <h2 class="title">Government Services All in One Place<br /></h2>
             <p class="intro">We make it easy for constituents to find, submit and keep track of requests</p>
             <p><a class="btn btn-cta btn-cta-primary" href="contact.html">Request a Demo</a></p>   
-            <button type="button" class="play-trigger btn-link " data-toggle="modal" data-target="#modal-video" ><i class="fa fa-youtube-play"></i> Watch the video</button>
+      <!--      <button type="button" class="play-trigger btn-link " data-toggle="modal" data-target="#modal-video" ><i class="fa fa-youtube-play"></i> Watch the video</button>-->
         </div><!--//container-->
     </section><!--//promo-->
     
